@@ -13,7 +13,6 @@ import com.intellij.openapi.command.undo.UndoableAction;
 import com.intellij.openapi.command.undo.UnexpectedUndoException;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.ex.DocumentEx;
-import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.NlsContexts.Command;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
@@ -27,12 +26,12 @@ final class UndoableGroup implements Dumpable {
   private static final Logger LOG = Logger.getInstance(UndoableGroup.class);
   private static final int BULK_MODE_ACTION_THRESHOLD = 50;
 
-  private final @Nullable Project project;
   private final @Nullable @Command String commandName;
   private final @NotNull List<? extends UndoableAction> actions;
   private final @NotNull UndoConfirmationPolicy confirmationPolicy;
   private final @Nullable UndoCommandFlushReason flushReason;
   private final int commandTimestamp;
+  private final boolean isLocalHistoryActivity;
   private final boolean isTransparent;
   private final boolean isGlobal;
   private final boolean isUndoable;
@@ -44,20 +43,18 @@ final class UndoableGroup implements Dumpable {
   private boolean isValid;
 
   UndoableGroup(
-    @Nullable Project project,
     @Nullable @Command String commandName,
     @NotNull List<? extends UndoableAction> actions,
     @NotNull UndoConfirmationPolicy confirmationPolicy,
-    @NotNull UndoRedoStacksHolder stacksHolder,
     @Nullable EditorAndState stateBefore,
     @Nullable EditorAndState stateAfter,
     @Nullable UndoCommandFlushReason flushReason,
     int commandTimestamp,
+    boolean isLocalHistoryActivity,
     boolean isTransparent,
     boolean isGlobal,
     boolean isValid
   ) {
-    this.project = project;
     this.commandName = commandName;
     this.actions = actions;
     this.confirmationPolicy = confirmationPolicy;
@@ -66,11 +63,11 @@ final class UndoableGroup implements Dumpable {
     this.stateAfter = stateAfter;
     this.flushReason = flushReason;
     this.commandTimestamp = commandTimestamp;
+    this.isLocalHistoryActivity = isLocalHistoryActivity;
     this.isTransparent = isTransparent;
     this.isTemporary = isTransparent;
     this.isGlobal = isGlobal;
     this.isValid = isValid;
-    composeStartFinishGroup(stacksHolder);
     this.isUndoable = ContainerUtil.all(actions, action -> !(action instanceof NonUndoableAction));
   }
 
@@ -149,6 +146,10 @@ final class UndoableGroup implements Dumpable {
     return isTransparent;
   }
 
+  boolean isLocalHistoryActivity() {
+    return isLocalHistoryActivity;
+  }
+
   int getCommandTimestamp() {
     return commandTimestamp;
   }
@@ -176,8 +177,8 @@ final class UndoableGroup implements Dumpable {
       return -1L;
     }
     return Math.min(
-      actions.get(0).getPerformedNanoTime(),
-      actions.get(actions.size() - 1).getPerformedNanoTime()
+      actions.getFirst().getPerformedNanoTime(),
+      actions.getLast().getPerformedNanoTime()
     );
   }
 
@@ -239,7 +240,7 @@ final class UndoableGroup implements Dumpable {
       LOG.debug("Performing " + (isUndo ? "undo" : "redo") + " for " + dumpState());
     }
     LocalHistoryAction action;
-    if (project != null && isGlobal()) {
+    if (isLocalHistoryActivity && isGlobal()) {
       String actionName = IdeBundle.message(isUndo ? "undo.command" : "redo.command", commandName);
       action = LocalHistory.getInstance().startAction(actionName);
     } else {
@@ -291,30 +292,6 @@ final class UndoableGroup implements Dumpable {
     }
   }
 
-  private void composeStartFinishGroup(@NotNull UndoRedoStacksHolder holder) {
-    FinishMarkAction finishMark = getFinishMark();
-    if (finishMark != null) {
-      boolean global = false;
-      String commandName = null;
-      UndoRedoList<UndoableGroup> stack = holder.getStack(finishMark.getAffectedDocument());
-      for (Iterator<UndoableGroup> iterator = stack.descendingIterator(); iterator.hasNext(); ) {
-        UndoableGroup group = iterator.next();
-        if (group.isGlobal()) {
-          global = true;
-          commandName = group.getCommandName();
-          break;
-        }
-        if (group.getStartMark() != null) {
-          break;
-        }
-      }
-      if (global) {
-        finishMark.setGlobal(true);
-        finishMark.setCommandName(commandName);
-      }
-    }
-  }
-
   private boolean shouldAskConfirmationForStartFinishGroup(boolean redo) {
     if (redo) {
       StartMarkAction mark = getStartMark();
@@ -331,7 +308,7 @@ final class UndoableGroup implements Dumpable {
     return false;
   }
 
-  private @Nullable StartMarkAction getStartMark() {
+  @Nullable StartMarkAction getStartMark() {
     for (UndoableAction action : actions) {
       if (action instanceof StartMarkAction startMark) {
         return startMark;
@@ -340,7 +317,7 @@ final class UndoableGroup implements Dumpable {
     return null;
   }
 
-  private @Nullable FinishMarkAction getFinishMark() {
+  @Nullable FinishMarkAction getFinishMark() {
     for (UndoableAction action : actions) {
       if (action instanceof FinishMarkAction finishMark) {
         return finishMark;
@@ -408,8 +385,8 @@ final class UndoableGroup implements Dumpable {
 
   @Override
   public @NotNull String dumpState() {
-    return "UndoableGroup[project=%s, name=%s, global=%s, transparent=%s, stamp=%s, policy=%s, temporary=%s, valid=%s, actions=%s, documents=%s]"
-      .formatted(project, commandName, isGlobal, isTransparent, commandTimestamp, confirmationPolicy, isTemporary, isValid, actions, getAffectedDocuments());
+    return "UndoableGroup[name=%s, global=%s, transparent=%s, stamp=%s, localHistory=%s, policy=%s, temporary=%s, valid=%s, actions=%s, documents=%s]"
+      .formatted(commandName, isGlobal, isTransparent, commandTimestamp, isLocalHistoryActivity, confirmationPolicy, isTemporary, isValid, actions, getAffectedDocuments());
   }
 
   @Override
